force-app/main/default/objects/Request_Keiri__c/Request_Keiri__c.object-meta.xml
<CustomObject>
    <label>経理依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>経理依頼No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>