force-app/main/default/objects/Request_Keiri__c/fields/abandon_car_model__c.field-meta.xml
<CustomField>
    <fullName>abandon_car_model__c</fullName>
    <label>請求断念_車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>