force-app/main/default/objects/Request_Keiri__c/fields/abandon_collection_content__c.field-meta.xml
<CustomField>
    <fullName>abandon_collection_content__c</fullName>
    <label>請求断念詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>