force-app/main/default/objects/Request_Keiri__c/fields/AbandonCollection_Amount__c.field-meta.xml
<CustomField>
    <fullName>AbandonCollection_Amount__c</fullName>
    <description>長期未回収案件の回収断念 のみ使用</description>
    <label>回収断念_断念金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>