force-app/main/default/objects/Request_Keiri__c/fields/AbandonCollection_Person__c.field-meta.xml
<CustomField>
    <fullName>AbandonCollection_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>長期未回収案件の回収断念 の承認フローの現在の作業者</description>
    <label>回収断念_作業者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AbandonCollection_Person</relationshipName>
    <type>Lookup</type>
</CustomField>