force-app/main/default/objects/Request_Keiri__c/fields/AbandonCollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>AbandonCollectionStatus__c</fullName>
    <description>販売業務課から申請される請求断念のステータスを示す項目
2026/1/29より請求情報からの申請に切り替え</description>
    <label>回収断念依頼 進行状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本部長承認待ち</fullName>
            </value>
            <value>
                <fullName>本部長却下</fullName>
            </value>
            <value>
                <fullName>依頼待ち</fullName>
            </value>
            <value>
                <fullName>中止</fullName>
            </value>
            <value>
                <fullName>経理処理待ち</fullName>
            </value>
            <value>
                <fullName>経理却下</fullName>
            </value>
            <value>
                <fullName>経理処理完了</fullName>
            </value>
            <value>
                <fullName>エラー対応_依頼待ち</fullName>
            </value>
            <value>
                <fullName>エラー対応_承認待ち</fullName>
            </value>
            <value>
                <fullName>エラー対応_経理処理待ち</fullName>
            </value>
            <value>
                <fullName>ソコトレ案件_処理待ち</fullName>
            </value>
            <value>
                <fullName>ソコトレ案件_処理完了</fullName>
            </value>
            <value>
                <fullName>再請求</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>