force-app/main/default/objects/Request_Keiri__c/fields/Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact__c</fullName>
    <label>経理部連絡者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>金井</fullName>
            </value>
            <value>
                <fullName>熊谷</fullName>
            </value>
            <value>
                <fullName>村竹</fullName>
            </value>
            <value>
                <fullName>速水</fullName>
            </value>
            <value>
                <fullName>内川</fullName>
            </value>
            <value>
                <fullName>高口</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>