force-app/main/default/objects/Request_Keiri__c/fields/actual_name_holder__c.field-meta.xml
<CustomField>
    <fullName>actual_name_holder__c</fullName>
    <description>山本</description>
    <label>実際の名義人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>