force-app/main/default/objects/Request_Keiri__c/fields/Approva_repairCosts__c.field-meta.xml
<CustomField>
    <fullName>Approva_repairCosts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>修理代の承認OK</label>
    <type>Checkbox</type>
</CustomField>