force-app/main/default/objects/Request_Keiri__c/fields/Approved_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Approved_DateTime__c</fullName>
    <description>山本</description>
    <label>振込承認日時</label>
    <type>DateTime</type>
</CustomField>