force-app/main/default/objects/Request_Keiri__c/fields/auction_member__c.field-meta.xml
<CustomField>
    <fullName>auction_member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>請求断念時に使用</description>
    <label>販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>経理依頼</relationshipLabel>
    <relationshipName>keiri_requests</relationshipName>
    <type>Lookup</type>
</CustomField>