force-app/main/default/objects/Request_Keiri__c/fields/Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Authorizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorizer_Keiri</relationshipName>
    <type>Lookup</type>
</CustomField>