force-app/main/default/objects/Request_Keiri__c/fields/bank_account_kb__c.field-meta.xml
<CustomField>
    <fullName>bank_account_kb__c</fullName>
    <description>山本</description>
    <label>口座種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>普通</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>当座</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>