force-app/main/default/objects/Request_Keiri__c/fields/bank_account_kb_value__c.field-meta.xml
<CustomField>
    <fullName>bank_account_kb_value__c</fullName>
    <description>山本</description>
    <formula>TEXT( bank_account_kb__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>口座種別値</label>
    <type>Text</type>
</CustomField>