force-app/main/default/objects/Request_Keiri__c/fields/bank_account_nm__c.field-meta.xml
<CustomField>
    <fullName>bank_account_nm__c</fullName>
    <description>山本</description>
    <label>口座名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>