force-app/main/default/objects/Request_Keiri__c/fields/bank_acct_form_collected__c.field-meta.xml
<CustomField>
    <fullName>bank_acct_form_collected__c</fullName>
    <description>口座情報の取引先の「登録口座」が空欄でなければTrueを返す。与儀</description>
    <formula>NOT( ISBLANK(  PaymentAccount__r.Account__r.registered_account__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>振込口座登録依頼書回収済み</label>
    <type>Checkbox</type>
</CustomField>