force-app/main/default/objects/Request_Keiri__c/fields/BillOneURL__c.field-meta.xml
<CustomField>
    <fullName>BillOneURL__c</fullName>
    <label>BillOneURL</label>
    <type>Url</type>
</CustomField>