force-app/main/default/objects/Request_Keiri__c/fields/branch_nm__c.field-meta.xml
<CustomField>
    <fullName>branch_nm__c</fullName>
    <description>山本</description>
    <label>支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>