force-app/main/default/objects/Request_Keiri__c/fields/CancelCount__c.field-meta.xml
<CustomField>
    <fullName>CancelCount__c</fullName>
    <description>山本</description>
    <formula>IF( NOT(  ISBLANK(  CancelDate__c )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>キャンセルカウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>