force-app/main/default/objects/Request_Keiri__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <description>山本</description>
    <label>キャンセル日</label>
    <type>Date</type>
</CustomField>