force-app/main/default/objects/Request_Keiri__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <formula>IF( NOT(ISBLANK(PurchaseOpportunity__c )), PurchaseOpportunity__r.Mst_Models_formula__c , Keiri_Sales__r.Mst_Models_formula__c )</formula>
    <label>車種</label>
    <type>Text</type>
</CustomField>