force-app/main/default/objects/Request_Keiri__c/fields/Chassis_number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_number__c</fullName>
    <formula>IF( NOT(ISBLANK(PurchaseOpportunity__c )), PurchaseOpportunity__r.CarNo__c, Keiri_Sales__r.CarNo__c )</formula>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>