force-app/main/default/objects/Request_Keiri__c/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.CollectionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類揃い予定日</label>
    <type>Date</type>
</CustomField>