force-app/main/default/objects/Request_Keiri__c/fields/Contract_formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_formula__c</fullName>
    <formula>HYPERLINK( ContractImageURL__c ,&quot;PDFを表示&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売買契約書・注文書（数式）</label>
    <type>Text</type>
</CustomField>