force-app/main/default/objects/Request_Keiri__c/fields/Contract_Image__c.field-meta.xml
<CustomField>
    <fullName>Contract_Image__c</fullName>
    <description>山本</description>
    <formula>IMAGE( ContractImageURL__c , &quot;売買契約書・注文書画像が不具合で表示されていないか、アップロードされていません。 振込依頼のファイルを確認してください。&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売買契約書・注文書画像</label>
    <type>Text</type>
</CustomField>