force-app/main/default/objects/Request_Keiri__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>山本</description>
    <label>売買契約書・注文書</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>紙：はなまる売契</fullName>
            </value>
            <value>
                <fullName>紙：相手方注文書</fullName>
            </value>
            <value>
                <fullName>紙：ソコリテ売契</fullName>
            </value>
            <value>
                <fullName>電子：はなまる売契</fullName>
            </value>
            <value>
                <fullName>電子：相手方注文書</fullName>
            </value>
            <value>
                <fullName>電子：ソコリテ売契</fullName>
            </value>
            <value>
                <fullName>売契不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>