force-app/main/default/objects/Request_Keiri__c/fields/ContractImageURL__c.field-meta.xml
<CustomField>
    <fullName>ContractImageURL__c</fullName>
    <description>山本</description>
    <label>売買契約書・注文書画像URL</label>
    <type>Url</type>
</CustomField>