force-app/main/default/objects/Request_Keiri__c/fields/Create_DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>Create_DateTimeValue__c</fullName>
    <description>山本</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日時</label>
    <type>DateTime</type>
</CustomField>