force-app/main/default/objects/Request_Keiri__c/fields/department_name__c.field-meta.xml
<CustomField>
    <fullName>department_name__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署名</label>
    <type>Text</type>
</CustomField>