force-app/main/default/objects/Request_Keiri__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>山本</description>
    <label>売却先</label>
    <length>50</length>
    <type>Text</type>
</CustomField>