force-app/main/default/objects/Request_Keiri__c/fields/DocumentOKCheck__c.field-meta.xml
<CustomField>
    <fullName>DocumentOKCheck__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.DocumentOKCheck__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類OK日</label>
    <type>Date</type>
</CustomField>