force-app/main/default/objects/Request_Keiri__c/fields/Electronic_contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Electronic_contract_URL__c</fullName>
    <description>山本</description>
    <label>電子売契URL</label>
    <type>Url</type>
</CustomField>