force-app/main/default/objects/Request_Keiri__c/fields/FB__c.field-meta.xml
<CustomField>
    <fullName>FB__c</fullName>
    <label>FBの不備詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OBIC_BillOne__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>承認がない場合</fullName>
            </value>
            <value>
                <fullName>振込管理システムに登録確認とれない場合</fullName>
            </value>
            <value>
                <fullName>振込日の日付が異なる場合</fullName>
            </value>
            <value>
                <fullName>金額が異なる場合</fullName>
            </value>
            <value>
                <fullName>名義相違の場合</fullName>
            </value>
            <value>
                <fullName>口座エラー</fullName>
            </value>
            <value>
                <fullName>承認フローに回っていない</fullName>
            </value>
            <value>
                <fullName>承認がおりていない</fullName>
            </value>
            <value>
                <fullName>金額が異なる</fullName>
            </value>
            <value>
                <fullName>名義相違</fullName>
            </value>
            <value>
                <fullName>請求書に振込口座の記載がない</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>