force-app/main/default/objects/Request_Keiri__c/fields/Inquiry_Completion_date_Keiri__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Completion_date_Keiri__c</fullName>
    <label>対応完了日(経理→営業)</label>
    <type>Date</type>
</CustomField>