force-app/main/default/objects/Request_Keiri__c/fields/Inquiry_Content_Keiri__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Content_Keiri__c</fullName>
    <label>問い合わせ種別(経理→営業)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>修理代の承認</fullName>
            </value>
            <value>
                <fullName>FBの不備​</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>