force-app/main/default/objects/Request_Keiri__c/fields/Is_Two_place_transfer_check__c.field-meta.xml
<CustomField>
    <fullName>Is_Two_place_transfer_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>二か所振込</label>
    <type>Checkbox</type>
</CustomField>