force-app/main/default/objects/Request_Keiri__c/fields/Keiri_completion_day__c.field-meta.xml
<CustomField>
    <fullName>Keiri_completion_day__c</fullName>
    <label>対応完了日(営業→経理)</label>
    <type>Date</type>
</CustomField>