force-app/main/default/objects/Request_Keiri__c/fields/keiri_FinalDate__c.field-meta.xml
<CustomField>
    <fullName>keiri_FinalDate__c</fullName>
    <description>山本</description>
    <label>振込完了日</label>
    <type>Date</type>
</CustomField>