force-app/main/default/objects/Request_Keiri__c/fields/Keiri_Manager__c.field-meta.xml
<CustomField>
    <fullName>Keiri_Manager__c</fullName>
    <label>担当者(経理)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>