force-app/main/default/objects/Request_Keiri__c/fields/Keiri_Sales__c.field-meta.xml
<CustomField>
    <fullName>Keiri_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談（経理→営業）</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>経理依頼 （経理→営業）</relationshipLabel>
    <relationshipName>Keiri_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>