force-app/main/default/objects/Request_Keiri__c/fields/LoginSystem_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LoginSystem_DateTime__c</fullName>
    <description>山本</description>
    <label>支払依頼入力日時</label>
    <type>DateTime</type>
</CustomField>