force-app/main/default/objects/Request_Keiri__c/fields/Lot_number__c.field-meta.xml
<CustomField>
    <fullName>Lot_number__c</fullName>
    <description>経理部Chatter送信にて買取商談のロット番号が変更されたら経理依頼に反映される。山本</description>
    <label>ロット番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>