force-app/main/default/objects/Request_Keiri__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <formula>IF( NOT(ISBLANK(PurchaseOpportunity__c )), PurchaseOpportunity__r.ModelYear_Japanese__c, Keiri_Sales__r.ModelYear_Japanese__c )</formula>
    <label>年式</label>
    <type>Text</type>
</CustomField>