force-app/main/default/objects/Request_Keiri__c/fields/ModelYearCarNameState__c.field-meta.xml
<CustomField>
    <fullName>ModelYearCarNameState__c</fullName>
    <description>山本</description>
    <formula>LEFT( ModelYear__c,4)&amp; &quot;・&quot;&amp;CarName__c&amp;&quot;・&quot;&amp; TEXT( PurchaseOpportunity__r.State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式・車種・状態</label>
    <type>Text</type>
</CustomField>