force-app/main/default/objects/Request_Keiri__c/fields/NoContractReason__c.field-meta.xml
<CustomField>
    <fullName>NoContractReason__c</fullName>
    <description>山本</description>
    <label>売契不要理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>売契不要企業</fullName>
            </value>
            <value>
                <fullName>担当者振込</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>