force-app/main/default/objects/Request_Keiri__c/fields/OBIC_BillOne__c.field-meta.xml
<CustomField>
    <fullName>OBIC_BillOne__c</fullName>
    <label>OBIC/BillOne</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inquiry_Content_Keiri__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OBIC</fullName>
            </value>
            <value>
                <fullName>BillOne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>