force-app/main/default/objects/Request_Keiri__c/fields/One_business_days__c.field-meta.xml
<CustomField>
    <fullName>One_business_days__c</fullName>
    <description>山本</description>
    <label>1営業日後</label>
    <type>Date</type>
</CustomField>