force-app/main/default/objects/Request_Keiri__c/fields/One_business_days_before__c.field-meta.xml
<CustomField>
    <fullName>One_business_days_before__c</fullName>
    <description>山本</description>
    <label>1営業日前</label>
    <type>Date</type>
</CustomField>