force-app/main/default/objects/Request_Keiri__c/fields/Others_Keiri__c.field-meta.xml
<CustomField>
    <fullName>Others_Keiri__c</fullName>
    <label>問い合わせ内容(経理→営業)</label>
    <type>TextArea</type>
</CustomField>