force-app/main/default/objects/Request_Keiri__c/fields/Ownership_release_doc_submission_date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_release_doc_submission_date__c</fullName>
    <description>買取商談の同名項目を表示。
OBICにある同名項目の日付が連携バッチにて買取商談に反映される。山本</description>
    <formula>PurchaseOpportunity__r.Ownership_release_doc_submission_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有権解除送付日</label>
    <type>Date</type>
</CustomField>