force-app/main/default/objects/Request_Keiri__c/fields/Payee_A__c.field-meta.xml
<CustomField>
    <fullName>Payee_A__c</fullName>
    <description>山本</description>
    <label>振込先</label>
    <length>50</length>
    <type>Text</type>
</CustomField>