force-app/main/default/objects/Request_Keiri__c/fields/PaymentAccount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>口座情報</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>経理依頼</relationshipLabel>
    <relationshipName>Request_Keiri</relationshipName>
    <type>Lookup</type>
</CustomField>