force-app/main/default/objects/Request_Keiri__c/fields/PaymentAcount_ApprovalDoc__c.field-meta.xml
<CustomField>
    <fullName>PaymentAcount_ApprovalDoc__c</fullName>
    <description>山本</description>
    <label>口座承認書類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>名刺</fullName>
            </value>
            <value>
                <fullName>車検証</fullName>
            </value>
            <value>
                <fullName>免許証コピー</fullName>
            </value>
            <value>
                <fullName>その他公的書類のコピー</fullName>
            </value>
            <value>
                <fullName>口座承認書類なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>