force-app/main/default/objects/Request_Keiri__c/fields/PaymentProcessingCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentProcessingCategory__c</fullName>
    <description>山本</description>
    <label>支払処理区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>確定</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>口座名義相違</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>口座エラー</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>不整合</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>