force-app/main/default/objects/Request_Keiri__c/fields/PaymentRequestInput_obic__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestInput_obic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>支払依頼入力</label>
    <type>Checkbox</type>
</CustomField>