force-app/main/default/objects/Request_Keiri__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>山本</description>
    <label>振込種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規口座振込</fullName>
                <label>口座マスタ登録必要</label>
            </value>
            <value>
                <fullName>1回限りの振込</fullName>
            </value>
            <value>
                <fullName>所有権会社へ振込</fullName>
            </value>
            <value>
                <fullName>二か所振込</fullName>
                <isActive>false</isActive>
                <label>二か所振込</label>
            </value>
            <value>
                <fullName>前回口座と同じ</fullName>
                <isActive>false</isActive>
                <label>前回口座と同じ</label>
            </value>
            <value>
                <fullName>当日振込</fullName>
                <isActive>false</isActive>
                <label>当日振込</label>
            </value>
            <value>
                <fullName>登録口座へ振込</fullName>
                <isActive>false</isActive>
                <label>登録口座へ振込</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>