force-app/main/default/objects/Request_Keiri__c/fields/person_check__c.field-meta.xml
<CustomField>
    <fullName>person_check__c</fullName>
    <formula>$User.Id = AbandonCollection_Person__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>回収断念_作業者チェック</label>
    <type>Checkbox</type>
</CustomField>