force-app/main/default/objects/Request_Keiri__c/fields/PO_Owner__c.field-meta.xml
<CustomField>
    <fullName>PO_Owner__c</fullName>
    <formula>IF( NOT(ISBLANK(PurchaseOpportunity__c )), PurchaseOpportunity__r.Owner__c , Keiri_Sales__r.Owner__c )</formula>
    <label>買取商談の所有者</label>
    <type>Text</type>
</CustomField>