force-app/main/default/objects/Request_Keiri__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談（営業→経理）</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>経理依頼（営業→経理）</relationshipLabel>
    <relationshipName>PurchaseOpportunity_Keiri</relationshipName>
    <type>Lookup</type>
</CustomField>