force-app/main/default/objects/Request_Keiri__c/fields/RecordLocked__c.field-meta.xml
<CustomField>
    <fullName>RecordLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>レコードのロック</label>
    <type>Checkbox</type>
</CustomField>