force-app/main/default/objects/Request_Keiri__c/fields/Request_Content_Keiri__c.field-meta.xml
<CustomField>
    <fullName>Request_Content_Keiri__c</fullName>
    <label>経理依頼内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>振込依頼</fullName>
            </value>
            <value>
                <fullName>FB修正・削除</fullName>
            </value>
            <value>
                <fullName>OBIC台帳修正・削除</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>他社オク落札キャンセル</fullName>
            </value>
            <value>
                <fullName>ブランドオークション等売却連絡</fullName>
            </value>
            <value>
                <fullName>振込キャンセル</fullName>
            </value>
            <value>
                <fullName>入金確認</fullName>
            </value>
            <value>
                <fullName>長期未回収案件の回収断念</fullName>
            </value>
            <value>
                <fullName>納車済連絡</fullName>
            </value>
            <value>
                <fullName>小売キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>