force-app/main/default/objects/Request_Keiri__c/fields/Request_Keiri_No__c.field-meta.xml
<CustomField>
    <fullName>Request_Keiri_No__c</fullName>
    <description>山本</description>
    <externalId>true</externalId>
    <label>経理依頼照合キー</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>