force-app/main/default/objects/Request_Keiri__c/fields/Request_to_Accounting_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Accounting_Remarks__c</fullName>
    <label>経理依頼詳細</label>
    <type>TextArea</type>
</CustomField>