force-app/main/default/objects/Request_Keiri__c/fields/RequestKeiriID_18__c.field-meta.xml
<CustomField>
    <fullName>RequestKeiriID_18__c</fullName>
    <formula>CASESAFEID (Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>経理依頼ID(18ケタ)</label>
    <type>Text</type>
</CustomField>