force-app/main/default/objects/Request_Keiri__c/fields/retail_stock__c.field-meta.xml
<CustomField>
    <fullName>retail_stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>小売在庫</label>
    <referenceTo>RetailStock__c</referenceTo>
    <relationshipLabel>経理依頼</relationshipLabel>
    <relationshipName>requests_keiri</relationshipName>
    <type>Lookup</type>
</CustomField>