force-app/main/default/objects/Request_Keiri__c/fields/return_comment__c.field-meta.xml
<CustomField>
    <fullName>return_comment__c</fullName>
    <description>山本</description>
    <label>差戻コメント</label>
    <type>TextArea</type>
</CustomField>