force-app/main/default/objects/Request_Keiri__c/fields/Sale_amount__c.field-meta.xml
<CustomField>
    <fullName>Sale_amount__c</fullName>
    <description>山本</description>
    <label>売却金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>