force-app/main/default/objects/Request_Keiri__c/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業管理</label>
    <referenceTo>SalesManagement__c</referenceTo>
    <relationshipLabel>経理依頼</relationshipLabel>
    <relationshipName>Request_Keiri_SalesManagement</relationshipName>
    <type>Lookup</type>
</CustomField>