force-app/main/default/objects/Request_Keiri__c/fields/Sansan_PersonInfo__c.field-meta.xml
<CustomField>
    <fullName>Sansan_PersonInfo__c</fullName>
    <description>山本</description>
    <formula>PaymentAccount__r.Sansan_PersonInfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sansan 人物情報</label>
    <type>Text</type>
</CustomField>