force-app/main/default/objects/Request_Keiri__c/fields/Scheduled_deposit_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_deposit_date__c</fullName>
    <description>山本</description>
    <label>入金予定日</label>
    <type>Date</type>
</CustomField>