force-app/main/default/objects/Request_Keiri__c/fields/ScheduledTransferDate_A__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTransferDate_A__c</fullName>
    <description>山本</description>
    <label>振込予定日</label>
    <type>Date</type>
</CustomField>