force-app/main/default/objects/Request_Keiri__c/fields/SummaryAccount__c.field-meta.xml
<CustomField>
    <fullName>SummaryAccount__c</fullName>
    <description>山本</description>
    <formula>IF(  PurchaseOpportunity__r.Account__r.IsPerson__c ,  PurchaseOpportunity__r.Account__r.PersonContact.LastName &amp;&quot; &quot;&amp; PurchaseOpportunity__r.Account__r.PersonContact.FirstName   , PurchaseOpportunity__r.SummaryAccount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>集計先名</label>
    <type>Text</type>
</CustomField>