force-app/main/default/objects/Request_Keiri__c/fields/SummaryAccountCode__c.field-meta.xml
<CustomField>
    <fullName>SummaryAccountCode__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Account__r.SummaryAccountCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>集計先コード</label>
    <type>Text</type>
</CustomField>