force-app/main/default/objects/Request_Keiri__c/fields/System_FinalDate__c.field-meta.xml
<CustomField>
    <fullName>System_FinalDate__c</fullName>
    <description>山本</description>
    <label>照合システム確定日</label>
    <type>Date</type>
</CustomField>