force-app/main/default/objects/Request_Keiri__c/fields/Transfer_Count__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Count__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Transfer_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>経理で振込承認された回数</inlineHelpText>
    <label>振込回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>