force-app/main/default/objects/Request_Keiri__c/fields/Transfer_on_the_day__c.field-meta.xml
<CustomField>
    <fullName>Transfer_on_the_day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>当日振込</label>
    <type>Checkbox</type>
</CustomField>