force-app/main/default/objects/Request_Keiri__c/fields/Transfer_request_approved__c.field-meta.xml
<CustomField>
    <fullName>Transfer_request_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名称を変更2025/1/5山本</description>
    <label>承認</label>
    <type>Checkbox</type>
</CustomField>